[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/gui/SlideSelect.gd" type="Script" id=1]
[ext_resource path="res://assets/Platform.png" type="Texture" id=2]

[node name="SlideSelect" type="HBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PrevButton" type="TextureButton" parent="."]
margin_left = 220.0
margin_right = 252.0
margin_bottom = 300.0
texture_normal = ExtResource( 2 )

[node name="Labels" type="CenterContainer" parent="."]
margin_left = 256.0
margin_right = 256.0
margin_bottom = 300.0

[node name="NextButton" type="TextureButton" parent="."]
margin_left = 260.0
margin_right = 292.0
margin_bottom = 300.0
texture_normal = ExtResource( 2 )
[connection signal="pressed" from="PrevButton" to="." method="_on_PrevButton_pressed"]
[connection signal="pressed" from="NextButton" to="." method="_on_NextButton_pressed"]
